fix styling on mobile

--- a/site/src/app/roadmap/catalog/CustomCourseCard.scss
+++ b/site/src/app/roadmap/catalog/CustomCourseCard.scss
@@ -91,48 +91,3 @@
     color: inherit !important;
   }
 }
-
-@media (max-width: 600px) {
-  .custom-card {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    font-size: 14px;
-
-    .course-card-top {
-      display: flex;
-      align-items: center;
-    }
-
-    .name {
-      min-width: 0;
-    }
-
-    .name-input {
-      width: 100%;
-      min-width: 0;
-    }
-
-    .units {
-      margin-left: auto;
-      white-space: nowrap;
-    }
-
-    .units-input {
-      width: 56px;
-      margin-left: auto;
-      margin-right: 2px;
-    }
-
-    .description-input {
-      width: 75%;
-      min-width: 0;
-    }
-
-    button.MuiIconButton-root {
-      margin: 0;
-      width: 32px;
-      height: 32px;
-    }
-  }
-}
